--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
 font-family: "ProximaNova";
-src: url("font/ProximaNova.otf") format("truetype");
+src: url("../font/ProximaNova.otf") format("truetype");
     font-style: normal;
     font-weight: normal;
 }
@@ -10,7 +10,9 @@ src: url("font/ProximaNova.otf") format("truetype");
 }
 
 body {
-    background: #070506 url("img/main-bg.png") top right 90% no-repeat;
+    background: #070506 url("../img/main-bg.jpg") top right -170% no-repeat;
+    background-size: contain;
+    background-attachment: fixed;
     color: #fff;
     font-family: 'Roboto', sans-serif;
 }
@@ -74,6 +76,11 @@ body {
     margin-bottom: 46px;
 }
 
+.button {
+    animation-iteration-count: infinite;
+    display: inline-block;
+}
+
 .button-play {
     position: relative;
     border: none;
@@ -89,7 +96,7 @@ body {
 }
 
 .button-play:after {
-    content: url("img/play.svg");
+    content: url("../img/play.svg");
     display: flex;
     align-items: center;
     justify-content: center;
@@ -141,7 +148,8 @@ body {
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0px 10px 26px rgba(0, 0, 0, 0.25);
-
+    text-decoration: none;
+    color: #fff;
 }
 
 .slider__item:before {
@@ -165,5 +173,76 @@ body {
 
 .slider__item:hover:before {
     background: rgba(64, 101, 255, 0.86);
+}
 
+.slider__rating-label {
+    margin-right: 10px;
+}
+
+.star {
+    background: url("../img/star.svg") no-repeat center;
+    width: 12px;
+    height: 12px;
+    display: inline-block;
+}
+
+.star-0 {
+    background: url("../img/star0.svg") no-repeat center;
+}
+
+.slider__nav--left {
+    width: 32px;
+    height: 32px;
+    border: none;
+    background: transparent url("../img/arrow-left.svg") no-repeat center;
+    margin-right: 15px;
+    cursor: pointer;
+    outline: none;
+}
+
+.slider__nav--right {
+    width: 32px;
+    height: 32px;
+    border: none;
+    background: transparent url("../img/arrow-right.svg") no-repeat center;
+    cursor: pointer;
+    outline: none;
+}
+
+.slider__nav--left span,
+.slider__nav--right span {
+    display: none;
+}
+
+@media (max-width: 600px) {
+    .hero__subtitle {
+        font-size: 24px;
+    }
+    .hero__title {
+        font-size: 36px;
+    }
+    .hero__description {
+        font-size: 16px;
+    }
+    .header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .header__logo {
+        margin-bottom: 30px;
+    }
+    .nav {
+        font-size: 14px;
+        display: flex;
+        align-items: center;
+        flex-wrap: nowrap;
+    }
+    .nav__link {
+        width: 65px;
+    }
+    .episodes {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
